# chugins

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  brassFaust.dsp  chugins.dsw  chugins.sln  faust2ck2web.sh  freeverbStereo (copy).dsp  freeverbStereo.dsp  howToFaust2ck2web.txt  makefile  vst_patch.patch
ABRev/: ABRev.cpp  makefile  makefile.osx
ABSaturator/: ABSaturator-test.ck  ABSaturator.chug.wasm  ABSaturator.cpp  ABSaturator.dsp  ABSaturator.dsw  ABSaturator.vcxproj  Biquad.h  Filters.cpp  Filters.h  dsp.h  makefile  makefile.mac  makefile.osx  makefile.win
AZA/: AZA-test.ck  AZA.cpp  AZA.vcxproj  README.md  makefile  makefile.mac  makefile.win
AbletonLink/: AbletonLink.cpp  AbletonLink.dsp  AbletonLink.dsw  AbletonLink.vcxproj  abl_link_instance.cpp  abl_link_instance.hpp  abl_link~.cpp  abl_link~.hpp  abletonlink-help.ck  makefile  makefile.linux  makefile.win32
AmbPan/: AmbPan.chug.wasm  AmbPan.cpp  AmbPan.dsp  AmbPan.dsw  AmbPan.vcxproj  AmbPan3-CCRMA.ck  AmbPan3-test.ck  makefile  makefile.linux  makefile.osx  makefile.win
AudioUnit/: AudioUnit-test.ck  AudioUnit.dsp  AudioUnit.dsw  AudioUnit.mm  makefile  makefile.osx
Binaural/: Binaural.chug.wasm  Binaural.cpp  Binaural.dsp  Binaural.dsw  Binaural.vcxproj  makefile  makefile.win  panB.ck
Bitcrusher/: Bitcrusher.chug.wasm  Bitcrusher.cpp  Bitcrusher.dsp  Bitcrusher.sln  Bitcrusher.tgz  Bitcrusher.vcxproj  makefile  makefile.osx  makefile.win32
BrassFaust/: BrassFaust-test.ck  BrassFaust.chug.wasm  BrassFaust.vcxproj  BrassFaustF.dsp-wrapper.cpp  BrassFaustF.dsp.cpp  makefile  makefile.win
Clip/: Clip.cpp  Clip.dsp  Clip.dsw  Clip.vcxproj  clip_example.ck  makefile  makefile.win32
ConvRev/: AudioFFT.cpp  AudioFFT.h  ConvRev-test.ck  ConvRev.ck  ConvRev.cpp  ConvRev.sln  ConvRev.vcxproj  FFTConvolver.cpp  FFTConvolver.h  README.md  Timer.cpp  Timer.h  Utilities.cpp  Utilities.h  conv_rev.ck  conv_rev_adc.ck  makefile  makefile.mac  makefile.win32  sse2neon.h
DbABCFile/: Abc.cpp  Abc.h  AbcGenMidi.cpp  AbcGenMidi.h  AbcGenMidiCtx.cpp  AbcMidiFile.cpp  AbcMidiFile.h  AbcMusic.cpp  AbcMusic.h  AbcParser.cpp  AbcParser.h  AbcQueue.cpp  AbcQueue.h  AbcStore.cpp  AbcStore.h  AbcStoreDriver.cpp  AbcStoreEvent.cpp  AbcStoreStress.cpp  dbAbcFile.cpp  dbAbcFile.h  dbAbcFileIn.cpp  main.cpp  readme.md
DbAbc/: Abc.h  AbcGenMidi.cpp  AbcGenMidi.h  AbcMidiFile.cpp  AbcMidiFile.h  AbcMidiTrackCtx.cpp  AbcMidiTrackCtx.h  AbcMusic.cpp  AbcParser.cpp  (+14 more)
Faust/: .gitignore  CMakeLists.txt  Faust.cpp  Faust.dsp  Faust.dsw  Faust.vcxproj  FaustLib.cmake  Info.plist  README.md  build_linux.sh  build_macos.sh  build_unix.sh  build_windows.bat  makefile  makefile.linux  makefile.mac  makefile.osx  makefile.win32
Faust/examples/: .gitignore  clarinet.ck  clarinet.dsp  compressor.ck  crybaby.ck  distortion.ck  fau.ck  fauReverb.ck  file-playback.ck  fin.ck  fin.dsp  flanger.ck  flute.ck  flute.dsp  keyboardString.ck  moogVCF.ck  phaser.ck  polyphonic_sampler.dsp  polyphony-simple.ck  polyphony.ck  reverb.ck  sidechain-compressor.ck  sidechain.dsp  smcAdvancedExample.ck  string.ck  string.dsp  stringDistortion.ck  test-import.ck  vocoder.ck  wah.ck
Faust/examples/assets/: README.md
Faust/examples/my_faust_code/: my_library.lib
Faust/libfaust-dynamic-x64/: libfaust.lib
Faust/libfaust-dynamic-x86/: libfaust.lib
Faust/libfaust/macOS-universal/: .gitignore
Faust/package/: .gitignore
Faust/win-x64/Release/: Faust.chug
FluidSynth/: FluidSynth-play.ck  FluidSynth.cpp  FluidSynth.dsp  FluidSynth.dsw  FluidSynth.vcxproj  HS_African_Percussion.sf2  README.md  build-pkg-linux.ck  build-pkg-mac.ck  build-pkg-win.ck  fluidsynth-help.ck  fluidsynth-pitchbend.ck  fluidsynth-test.ck  fluidsynth-tuning.ck  fluidsynth.cpp  fluidsynth.dsp  fluidsynth.dsw  makefile  makefile.linux  makefile.mac  makefile.osx  makefile.win  meson.build
FluidSynth/chump_build_mac/: 1-codesign.sh  2-chumpinate.sh  3-notarize.sh
FluidSynth/cross/: arm64-macos.txt  x86_64-macos.txt
FluidSynth/subprojects/: glib.wrap
Sampler/: CMakeLists.txt  README.md
Sampler/src/: SamplerChugin.cpp
Sampler/tests/: sampler_test.ck
Sampler/tests/assets/: LICENSE.md
VST/: .gitignore  CMakeLists.txt  README.md
VST/JuceLibraryCode/: AppConfig.h  JuceHeader.h
VST/src/: VST.cpp
VST/tests/: serum_preset.fxp  vst_effect_test.ck  vst_instrument_test.ck
VST/tests/plugins/: README.md
WarpBuf/: .gitignore  1-codesign.sh  2-chumpinate.sh  3-notarize.sh  CMakeLists.txt  Info.plist  README.md  build-pkg-linux.ck  build-pkg-mac-arm.ck  build-pkg-windows.ck  build_all_platforms.sh  build_unix.sh  build_windows.bat  meson.build
WarpBuf/src/: AbletonClipInfo.h  WarpBufChugin.cpp  WarpBufChugin.h  WarpBufChuginDLL.cpp
WarpBuf/subprojects/: rubberband.wrap
WarpBuf/tests/: warpbuf_advanced.ck  warpbuf_basic.ck  warpbuf_no_warp_file.ck  warpbuf_silent.ck
WarpBuf/tests/assets/: .gitignore  1375__sleep__90-bpm-nylon2.wav.asd  381353__waveplaysfx__drumloop-120-bpm-edm-drum-loop-022.wav.asd  README.md
rave/: CMakeLists.txt  README.md  load_test.ck  makefile  makefile.osx  makefile.win32  memory_test.ck  rave.cpp  rave.dsp  rave.dsw  rave.vcxproj  rave_test.ck  rave_test.cpp
rave/circular_buffer_tests/: circular_buffer_tests.cpp  circular_buffer_tests.vcxproj  circular_buffer_tests.vcxproj.filters  rave_test.cpp
rave/circular_buffer_tests/x64/Debug/: circular_buffer_tests.dll.recipe  circular_buffer_tests.ilk  vc143.idb
rave/circular_buffer_tests/x64/Debug/circular.58C3BC9A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  circular_buffer_tests.lastbuildstate  circular_buffer_tests.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
rave/circular_buffer_tests/x64/Release/: circular_buffer_tests.dll.recipe  circular_buffer_tests.iobj  circular_buffer_tests.ipdb
rave/circular_buffer_tests/x64/Release/circular.58C3BC9A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  circular_buffer_tests.lastbuildstate  circular_buffer_tests.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+1125 files in other folders)
